<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_hone_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="60dp"
    android:visibility="gone"
    app:layout_constraintTop_toBottomOf="@+id/iv_login_icon">


    <ImageView
        android:id="@+id/iv_password_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/icon_password_hide"
        app:layout_constraintBottom_toBottomOf="@+id/ace_login_input_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ace_login_input_password"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_password_error_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/password_error"
        android:textColor="@color/color_F84435"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/view_login_input_password"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_retrieve_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/retrieve_password"
        android:textColor="@color/color_b6b6b6"
        android:textSize="13sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_login_input_password"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view_login_input_user_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/color_dfdfe0"
        app:layout_constraintTop_toBottomOf="@+id/ace_login_input_user"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view_login_input_password"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/color_dfdfe0"
        app:layout_constraintTop_toBottomOf="@+id/ace_login_input_password"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ace_login_input_user"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/input_user"
        android:maxLength="11"
        android:inputType="number"
        android:textColor="@color/color_333333"
        android:textSize="18sp"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ace_login_input_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="21dp"
        android:layout_marginRight="40dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColor="@color/color_333333"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/view_login_input_user_line"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
