<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/iv_login_icon"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/icon_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_login_submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/color_mian_radius8"
        android:gravity="center"
        android:text="@string/login_txt"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_login_phone"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/tv_login_other_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/other_phone"
        android:textColor="@color/color_mian"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="@+id/btn_login_submit"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_submit"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_login_user_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/user_password_login"
        android:textColor="@color/color_mian"
        android:textSize="13sp"
        app:layout_constraintRight_toRightOf="@+id/btn_login_submit"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_submit"
        tools:ignore="MissingConstraints" />

    <include layout="@layout/layout_back" />

    <include layout="@layout/layout_login_agreement" />

    <include layout="@layout/layout_login_other" />

    <include layout="@layout/layout_login_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>