<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_phone_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="60dp"
    android:layout_marginRight="60dp"
    android:visibility="gone"
    app:layout_constraintTop_toBottomOf="@+id/iv_login_icon">

    <ImageView
        android:id="@+id/iv_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_direction"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login_86"
        app:layout_constraintLeft_toRightOf="@+id/tv_login_86"
        app:layout_constraintTop_toTopOf="@+id/tv_login_86"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_login_86"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_86"
        android:textColor="@color/color_333333"
        android:textSize="18sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_login_input_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/input_tips"
        android:textColor="@color/color_b6b6b6"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@+id/view_login_line"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view_login_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/color_dfdfe0"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_86"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ace_login_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:hint="@string/input_phone"
        android:maxLength="11"
        android:inputType="number"
        android:background="@android:color/transparent"
        android:textColor="@color/color_333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login_86"
        app:layout_constraintLeft_toRightOf="@+id/iv_direction"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
