<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <TextView
        android:id="@+id/tv_forget_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="46dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="获取验证码"
        android:textColor="@color/color_mian"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ace_forget_code"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ace_forget_code"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view_forget_code_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="46dp"
        android:background="@color/color_dfdfe0"
        app:layout_constraintTop_toBottomOf="@+id/ace_forget_code"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view_code_line"
        android:layout_width="2dp"
        android:layout_height="30dp"
        android:layout_marginRight="20dp"
        android:background="@color/color_dfdfe0"
        app:layout_constraintBottom_toBottomOf="@+id/tv_forget_code"
        app:layout_constraintRight_toLeftOf="@+id/tv_forget_code"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view_forget_phone_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="46dp"
        android:background="@color/color_dfdfe0"
        app:layout_constraintTop_toBottomOf="@+id/ace_forget_phone"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ace_forget_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="69dp"
        android:layout_marginRight="46dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/input_forget_phone"
        android:maxLength="11"
        android:inputType="number"
        android:textColor="@color/color_333333"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/ll_back"
        app:layout_constraintTop_toBottomOf="@+id/ll_back"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ace_forget_code"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="21dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/input_forget_code"
        android:inputType="number"
        android:maxLength="6"
        android:textColor="@color/color_333333"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/view_code_line"
        app:layout_constraintTop_toBottomOf="@+id/view_forget_phone_line"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_forget_submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="44dp"
        android:layout_marginRight="46dp"
        android:background="@drawable/color_mian_radius8"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_forget_code_line"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_forget_error_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="46dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/input_phone"
        android:textColor="@color/color_F84435"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/view_forget_code_line"
        tools:ignore="MissingConstraints" />

    <include layout="@layout/layout_back" />


</androidx.constraintlayout.widget.ConstraintLayout>